테이블 생성

--- a/재고관리자동화/webpage/INDEX.html
+++ b/재고관리자동화/webpage/INDEX.html
@@ -100,8 +100,8 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <div class="collapse-divider"></div>
                         <h6 class="collapse-header">품목 관리</h6>
-                        <a class="collapse-item" href="MANAGE_PART_BOM.html">BOM</a>
-                        <a class="collapse-item" href="MANAGE_PART_MATERIAL.html">부품</a>
+                        <a class="collapse-item" href="MANAGE_BOM.html">BOM</a>
+                        <a class="collapse-item" href="MANAGE_PART.html">부품</a>
                     </div>
                 </div>
             </li>
