--- a/studio/front-end/public/index.html
+++ b/studio/front-end/public/index.html
@@ -21,7 +21,7 @@
 <!--    모바일 페이지 확대 방지-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-    <title>React App</title>
+    <title>AtO STUDIO</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
